--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <h1>CSS</h1>
+    <p> <strong> CSS селектори </strong> використовуються для "пошуку" (або вибору) HTML-елементів, які ви хочете стилізувати.</p>
+    <p>Можна розділити CSS селектори на п’ять категорій:</p>
+    <ul>
+        <li>Прості селектори (вибір елементів на основі імені, ідентифікатору, класу)</li>
+        <li>Комбінаторні селектори (вибір елементів на основі визначених відношень між ними)</li>
+        <li>Селектори псевдокласів (вибір елементів на основі визначеного стану)</li>
+        <li>Селектори псевдоелементів (вибір і стилізація частини елемента)</li>
+        <li>Селектори атрибутів (вибір елементів на основі атрибуту або значення атрибуту)</li>
+    </ul>
     <h2>Cелектори бувають</h2>
     <div>
         <ul>
