added some fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Market</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./fonts/Poppins-Black.ttf">
 </head>
 <body>
     <div class="name_styles_block">
