--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,8 @@
 
             </div>
         </div>
-    <section>   
+    </section>
+    <section>
         <div class="aboutme_conteiner">
             <h2>About Me</h2>
             <p>
@@ -44,8 +45,69 @@
                 quibusdam.
             </p>
         </div>
-    </section>     
+    </section>
+    <section class="img_section">
+        <div class="card">
+            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
+                <div class="text-float">
+                    <h2>40+</h2>
+                    <p>projects</p>
+                </div>
+        </div>
+        <div class="card">
+            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
+                <div class="text-float">
+                    <h2>40+</h2>
+                    <p>projects</p>
+                </div>
+        </div>
+        <div class="card">
+            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
+                <div class="text-float">
+                    <h2>40+</h2>
+                    <p>projects</p>
+                </div>
+        </div>
+        <div class="card">
+            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
+                <div class="text-float">
+                    <h2>40+</h2>
+                    <p>projects</p>
+                </div>
+        </div>
+        <div class="card">
+            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
+                <div class="text-float">
+                    <h2>40+</h2>
+                    <p>projects</p>
+                </div>
+        </div>
+        <div class="card">
+            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
+                <div class="text-float">
+                    <h2>40+</h2>
+                    <p>projects</p>
+                </div>
+        </div>
+    </section>  
+    <section class="video_section">
+        <div class="video_conteiner">
+            <h3>How do i work</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci dolores provident quaerat tempora sint earum culpa error distinctio itaque reiciendis, a, consequatur libero? Quas aspernatur eligendi, natus velit dolores officiis.</p>
+            <iframe  width="1110" height="600"
+             src="https://www.youtube.com/embed/zDyAnOGrxYQ?si=OR6tDAQvoUy19fKi"
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
         
     </section>
+    <section class="footer">
+        <div class="footer-conteiner">
+            <h4>Yakovlev Ihor</h4>
+            <p>(c) 2024. All rights reserved</p>
+        </div>
+     </section>
 </body>
 </html>
