--- a/index.htm
+++ b/index.htm
@@ -8,106 +8,117 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <section class="top_saction">
-        <div class="top_conteiner">
-            <div>
-                <nav class="nav_in_header">
-                    <ul>
-                        <li><a href="/">HOMEPAGE</a></li>
-                        <li><a href="/">ABOUT AUTHOR</a></li>
-                        <li><a href="/">WORKS</a></li>
-                        <li><a href="/">PROCESS</a></li>
-                        <li><a href="/">CONTACTS</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="bottom_conteiner">
+    <section class="header-section">
+        <div class="conteiner">
+            <nav class="nav_in_header">
+                <ul>
+                    <li><a href="/">HOMEPAGE</a></li>
+                    <li><a href="/">ABOUT AUTHOR</a></li>
+                    <li><a href="/">WORKS</a></li>
+                    <li><a href="/">PROCESS</a></li>
+                    <li><a href="/">CONTACTS</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <section class="info-in-header-section">
+        <div class="conteiner">
+           <div class="info-conteiner">
                 <h1>Design and layout</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Recusandae aliquid ipsam nesciunt fugit expedita numquam
-                    commodi quae sequi placeat distinctio eius ullam, reprehenderit 
-                    amet debitis atque blanditiis obcaecati? Veniam, quaerat!
+                    Lorem Ipsum is fish text often
+                     used in print and web design.
+                     Lorem Ipsum has been the standard
+                      "fish" for Latin texts since the early
+                       16th century.
                 </p>
-                <button class="header_button" >WRITE ME</button>
-
+                <button> WRITE ME</button>
+           </div>    
+        </div>
+    </section>
+    <section class="about-me-section">
+        <div class="conteiner">
+            <div class="about-me-conteiner">
+                <h2>About Me</h2>
+                <p>Lorem Ipsum is fish text often used in 
+                print and web design. Lorem Ipsum has been the
+                 standard "fish" for Latin texts since the early 
+                 16th century.
+                </p>
             </div>
         </div>
     </section>
-    <section>
-        <div class="aboutme_conteiner">
-            <h2>About Me</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Tempora quis illo deserunt vero fugit, exercitationem 
-                quaerat reiciendis! Itaque cupiditate incidunt, numquam, 
-                tenetur natus consequuntur facere, magni veniam atque saepe
-                quibusdam.
-            </p>
+    <section class="img-section">
+        <div class="conteiner">
+            <div class="card">
+                <img class="floatted-imge" src="./img/eeeeee57.png" alt="">
+                    <div class="text-float">
+                        <h2>40+</h2>
+                        <p>projects</p>
+                    </div>
+            </div>
+            <div class="card">
+                <img class="floatted-imge" src="./img/eeeeee57.png" alt="">
+                    <div class="text-float">
+                        <h2>40+</h2>
+                        <p>projects</p>
+                    </div>
+            </div>
+            <div class="card">
+                <img class="floatted-imge" src="./img/eeeeee57.png" alt="">
+                    <div class="text-float">
+                        <h2>40+</h2>
+                        <p>projects</p>
+                    </div>
+            </div>
+            <div class="card">
+                <img class="floatted-imge" src="./img/eeeeee57.png" alt="">
+                    <div class="text-float">
+                        <h2>40+</h2>
+                        <p>projects</p>
+                    </div>
+            </div>
+            <div class="card">
+                <img class="floatted-imge" src="./img/eeeeee57.png" alt="">
+                    <div class="text-float">
+                        <h2>40+</h2>
+                        <p>projects</p>
+                    </div>
+            </div>
+            <div class="card">
+                <img class="floatted-imge" src="./img/eeeeee57.png" alt="">
+                    <div class="text-float">
+                        <h2>40+</h2>
+                        <p>projects</p>
+                    </div>
+            </div>
+    </section>
+    <section class="video-section">
+        <div class="conteiner">
+            <div class="video-conteiner">
+                <h3>How do i work</h3>
+                <p>Lorem Ipsum is fish text often used 
+                    in print and web design. Lorem Ipsum
+                     has been the standard "fish" for Latin
+                      texts since the early 16th century.
+                </p>
+                <iframe  width="1110" height="600"
+                src="https://www.youtube.com/embed/zDyAnOGrxYQ?si=OR6tDAQvoUy19fKi"
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </section>
-    <section class="img_section">
-        <div class="card">
-            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
-                <div class="text-float">
-                    <h2>40+</h2>
-                    <p>projects</p>
-                </div>
+    <section class="footer-section">
+        <div class="conteiner">
+            <div>
+                <h4>Yakovlev Ihor</h4>
+                <p>(c) 2024. All rights reserved</p>
+            </div>
         </div>
-        <div class="card">
-            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
-                <div class="text-float">
-                    <h2>40+</h2>
-                    <p>projects</p>
-                </div>
-        </div>
-        <div class="card">
-            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
-                <div class="text-float">
-                    <h2>40+</h2>
-                    <p>projects</p>
-                </div>
-        </div>
-        <div class="card">
-            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
-                <div class="text-float">
-                    <h2>40+</h2>
-                    <p>projects</p>
-                </div>
-        </div>
-        <div class="card">
-            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
-                <div class="text-float">
-                    <h2>40+</h2>
-                    <p>projects</p>
-                </div>
-        </div>
-        <div class="card">
-            <img class="floatted-imge" src="./img/free-icon-blueprint-1372557.png" alt="">
-                <div class="text-float">
-                    <h2>40+</h2>
-                    <p>projects</p>
-                </div>
-        </div>
-    </section>  
-    <section class="video_section">
-        <div class="video_conteiner">
-            <h3>How do i work</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci dolores provident quaerat tempora sint earum culpa error distinctio itaque reiciendis, a, consequatur libero? Quas aspernatur eligendi, natus velit dolores officiis.</p>
-            <iframe  width="1110" height="600"
-             src="https://www.youtube.com/embed/zDyAnOGrxYQ?si=OR6tDAQvoUy19fKi"
-              title="YouTube video player" 
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-            </iframe>
-        </div>
-        
     </section>
-    <section class="footer">
-        <div class="footer-conteiner">
-            <h4>Yakovlev Ihor</h4>
-            <p>(c) 2024. All rights reserved</p>
-        </div>
-     </section>
+    
 </body>
 </html>
