--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
         </div>
     </section>
+    <div class="grey-line"></div>
     <section class="info-section">
         <div class="conteiner">
             <div class="info-div">
@@ -104,9 +105,201 @@
                 <div>
                     <img class="o-img2" src="./gif-png/4.png" alt="">
                 </div>
-
             </div>
         </div>
+    </section>
+    <section class="localize-section">
+        <div class="conteiner">
+            <h4>What can you localize with Lokalise?</h4>
+            <div class="localize-conteiner">
+                <div class="card">
+                    <img class="card-png" src="./card-png/1.png" alt="">
+                    <h5>Web apps</h5>
+                    <p>Any kind of web apps — backend, <br> frontend, single page, blogs — you <br> name it.</p>
+                </div>
+                <div class="card">
+                    <img class="card-png" src="./card-png/2.png" alt="">
+                    <h5>Mobile apps</h5>
+                    <p>Upload any mobile platform language <br> files. Embed Lokalise iOS SDK or <br> Lokalise Android SDK if you prefer. </p>
+                </div>
+                <div class="card">
+                    <img class="card-png" src="./card-png/3.png" alt="">
+                    <h5>Games</h5>
+                    <p>Our cloud software is trusted by <br> many leading game developers <br> around the world.</p>
+                </div>
+            </div>
+            <div class="localize-conteiner">
+                <div class="card">
+                    <img class="card-png" src="./card-png/4.png" alt="">
+                    <h5>Documents</h5>
+                    <p>Upload your DOCX and static HTML <br> files.</p>
+                </div>
+                <div class="card">
+                    <img class="card-png" src="./card-png/5.png" alt="">
+                    <h5>Marketing e-mails</h5>
+                    <p>Integrate with Salesforce Marketing <br> Cloud (coming soon) or translate <br> static e-mails.</p>
+                </div>
+                <div class="card">
+                    <img class="card-png" src="./card-png/6.png" alt="">
+                    <h5>IoT</h5>
+                    <p>We support most popular localization <br> file formats.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="one-more-section">
+        <div class="conteiner">
+            <h6>Boost your localization team’s productivity tenfold</h6>
+            <div class="one-more-pod-conteiner">
+                <div class="card2">
+                    <img class="one-png1" src="./one-more-png/1.png" alt="">
+                    <h2>Managers</h2>
+                    <p>Update existing and launch new features <br> and products while simultaneously <br> localizing them in multiple languages. <br> Streamline your team's workflow, <br> maximize productivity, and speed up <br> expansion to other markets.</p>
+                    <a href="">Learn more</a>
+                </div>
+                <div class="card2">
+                    <img class="one-png2" src="./one-more-png/2.png" alt="">
+                    <h2>Developers</h2>
+                    <p>Set up an integration with your code <br> repository or your own custom SDK via <br> Lokalise's powerful API. Do that once, and <br> every time you make changes in the code, <br> they'll be automatically imported to <br> Lokalise for translation.</p>
+                    <a href="">Learn more</a>
+                </div class="card2">
+                <div class="card2">
+                    <img class="one-png3" src="./one-more-png/3.png" alt="">
+                    <h2>Translators</h2>
+                    <p>Eliminate double-work and neverending <br> revisions with visual context (screenshots) <br> and live previews. Improve the quality and <br> speed of your translations with built-in <br> CAT tools, like autocomplete, inline <br> machine translation, and translation <br> memory.</p>
+                    <a href="">Learn more</a>
+                </div>
+            </div>  
+        </div>
+    </section>
+    <section class="blue-section">
+        <div class="conteiner">
+            <div class="pod-blue-conteiner">
+                <div>
+                    <h3>“Lokalise has turned a task we were dreading into an absolute <br> pleasure. Great platform, intuitive UX, powerful API. The <br> automatic text recognition for screenshots has been a <br> lifesaver, and over-the-air updates are the icing on the cake.”</h3>
+                    <p>Edward Cooper, Chief Mobile Officer</p>
+                    <img style="height: 25px; width: 115px;" src="./blue-png/1.png" alt="">
+                </div>
+                <div>
+                    <img style="width: 310px; height: 310px;" src="./blue-png/mugik.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="zaebalsa-sectione">
+        <div class="conteiner">
+            <div class="pod-zaebalo-conteiner">
+                <div>
+                    <img style="width: 176px; height: 154px;" src="./zaebalsa-png/tort.png" alt="">
+                    
+                </div>
+                <div>
+                    <h2>The most-loved translation <br> management software</h2>
+                </div>
+                <div class="one-more-grey-line"></div>
+                <div class="png-in-zaebalo-section">
+                    <img style="width: 128px; height: 116px; margin-right: 80px;" src="./zaebalsa-png/1.png" alt="">
+                    <img style="width: 150px; height: 116px;" src="./zaebalsa-png/2.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bird-section">
+        <div class="conteiner">
+            <div class="pod-bird-conteiner">
+                    <h2>Integrate Lokalise with <br> your work tools</h2>
+                    <p>Automate processes, eliminate routine tasks, <br> and track progress with ease.</p>
+                    <img style="width: 1023px; height: 445px;" src="./bird-png/image.png" alt="">
+                    <button>See all integrations</button>
+            </div>
+        </div>
+    </section>
+    <section class="skoro-konec-section">
+        <div class="conteiner">
+            <div class="skoro-konec-conteiner">
+                <h2>Localization made easy. <br> Why wait?</h2>
+                <p>Try for free or let us show you how it works.</p>
+                <button>Try it free</button>
+            </div>
+        </div>
+    </section>
+    <section class="nu-wot-wot-konec-section">
+        <div class="conteiner">
+            <div class="mnogo-div-class">
+                <div class="velik-conteiner">
+                    <h2>Case Studies</h2>
+                    <img style="width: 300px; height: 300px; margin-bottom: 15px;" src="./nu-wot-wot-konec-pmg/1.png" alt="">
+                    <img style="width: 80px; height: 32px; margin-bottom: 20px;" src="./nu-wot-wot-konec-pmg/2.png" alt="">
+                    <p>Riding towards global success <br> with a 100% teammate <br> enthusiasm</p>
+                    <a href="/">Read more</a>
+                </div>
+                <div class="ul-div">
+                    <p>Product</p>
+                    <ul>
+                        <li>For developers</li>
+                        <li>For managers</li>
+                        <li>For translators</li>
+                        <li>For designers</li>
+                        <li>Integrations</li>
+                        <li>Security</li>
+                        <li>Pricing</li>
+                        <li>Automations</li>
+                    </ul>
+                </div>
+                <div class="ul-div">
+                    <p>Support</p>
+                    <ul>
+                        <li>Contact</li>
+                        <li>Documentation</li>
+                        <li>Status</li>
+                        <li>Product Updates</li>
+                        <li>CLI Tool</li>
+                        <li>API Reference</li>
+                        <li>iOS and Android SDK</li>
+                        <li>Supported File Formats</li>
+                    </ul>
+                </div>
+                <div class="ul-div">
+                    <p>Company</p>
+                    <ul>
+                        <li>About</li>
+                        <li>Blog</li>
+                        <li>Careers | We`re Hiring</li>
+                        <li>Case Studies</li>
+                        <li>Media Kit</li>
+                    </ul>
+                </div>
+                <div class="ul-div">
+                    <p>Legal</p>
+                    <ul>
+                        <li>Terms of Service</li>
+                        <li>Privacy Policy</li>
+                        <li>Cookie Policy</li>
+                        <li>Privacy Shield</li>
+                        <li>DPA</li>
+                        <li>List of Sub-processors</li>
+                        <li>Candidates Privacy <br> Notice</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="conteiner">
+        <div class="grey-line"></div>
+    </div>
+    <section class="last-section">
+            <div class="conteiner">
+                <div class="last-last-ura-naconecto-conteiner">
+                    <div class="last-png-and-p">
+                        <img src="./lastpng/image.png" alt="">
+                        <p>Localization workflow for your web and mobile <br> apps, games and digital content.</p>
+                    </div>
+                    <div>
+                        <p>©2001-2020 <br>All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+
     </section>
 </body>
 </html>
