fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <section class="nav-section">
+    <header>
         <div>
             <div class="navigator">
                 <div class="img-and-nav">
-                    <img src="./png/photo_2024-03-20_11-44-23.jpg" alt="">
+                   <a href="index.html"><img src="./png/photo_2024-03-20_11-44-23.jpg" alt=""></a> 
                     <nav>
                         <ul>
                             <li><a href="/">Product</a></li>
@@ -24,12 +24,12 @@
                     </nav>
                 </div>    
                 <div>
-                    <button class="Log-in-button">Log in</button>
-                    <button class="try-it-button">Try it free</button>
+                    <button class="btn btn-white">Log in</button>
+                    <button class="btn btn-orange">Try it free</button>
                 </div>
             </div>
         </div>
-    </section>
+    </header>
     <div class="grey-line"></div>
     <section class="info-section">
         <div class="conteiner">
@@ -38,8 +38,8 @@
                     <h1>Accelerate localization from code to delivery</h1>
                     <p class="p1">A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast project delivery.</p>
                     <div class="buttons-div">
-                        <button class="button1">Try it free</button>
-                        <button class="button2">Book a demo</button>
+                        <button class="btn btn-big-orange">Try it free</button>
+                        <button class="btn btn-big-white">Book a demo</button>
                     </div>
                     <p class="p2">Try all features for 14 days · No credit card required</p>
                 </div>
@@ -110,47 +110,47 @@
     </section>
     <section class="localize-section">
         <div class="conteiner">
-            <h4>What can you localize with Lokalise?</h4>
-            <div class="localize-conteiner">
-                <div class="card">
-                    <img class="card-png" src="./card-png/1.png" alt="">
-                    <h5>Web apps</h5>
-                    <p>Any kind of web apps — backend, <br> frontend, single page, blogs — you <br> name it.</p>
-                </div>
-                <div class="card">
-                    <img class="card-png" src="./card-png/2.png" alt="">
-                    <h5>Mobile apps</h5>
-                    <p>Upload any mobile platform language <br> files. Embed Lokalise iOS SDK or <br> Lokalise Android SDK if you prefer. </p>
-                </div>
-                <div class="card">
-                    <img class="card-png" src="./card-png/3.png" alt="">
-                    <h5>Games</h5>
-                    <p>Our cloud software is trusted by <br> many leading game developers <br> around the world.</p>
-                </div>
-            </div>
-            <div class="localize-conteiner">
-                <div class="card">
-                    <img class="card-png" src="./card-png/4.png" alt="">
-                    <h5>Documents</h5>
-                    <p>Upload your DOCX and static HTML <br> files.</p>
-                </div>
-                <div class="card">
-                    <img class="card-png" src="./card-png/5.png" alt="">
-                    <h5>Marketing e-mails</h5>
-                    <p>Integrate with Salesforce Marketing <br> Cloud (coming soon) or translate <br> static e-mails.</p>
-                </div>
-                <div class="card">
-                    <img class="card-png" src="./card-png/6.png" alt="">
-                    <h5>IoT</h5>
-                    <p>We support most popular localization <br> file formats.</p>
+            <div>
+                <h4>What can you localize with Lokalise?</h4>
+                <div class="localize-conteiner">
+                    <div class="card">
+                        <img class="card-png" src="./card-png/1.png" alt="">
+                        <h5>Web apps</h5>
+                        <p>Any kind of web apps — backend, <br> frontend, single page, blogs — you <br> name it.</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-png" src="./card-png/2.png" alt="">
+                        <h5>Mobile apps</h5>
+                        <p>Upload any mobile platform language <br> files. Embed Lokalise iOS SDK or <br> Lokalise Android SDK if you prefer. </p>
+                    </div>
+                    <div class="card">
+                        <img class="card-png" src="./card-png/3.png" alt="">
+                        <h5>Games</h5>
+                        <p>Our cloud software is trusted by <br> many leading game developers <br> around the world.</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-png" src="./card-png/4.png" alt="">
+                        <h5>Documents</h5>
+                        <p>Upload your DOCX and static HTML <br> files.</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-png" src="./card-png/5.png" alt="">
+                        <h5>Marketing e-mails</h5>
+                        <p>Integrate with Salesforce Marketing <br> Cloud (coming soon) or translate <br> static e-mails.</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-png" src="./card-png/6.png" alt="">
+                        <h5>IoT</h5>
+                        <p>We support most popular localization <br> file formats.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="one-more-section">
+    <section class="localization-team-section">
         <div class="conteiner">
             <h6>Boost your localization team’s productivity tenfold</h6>
-            <div class="one-more-pod-conteiner">
+            <div class="localization-team-pod-conteiner">
                 <div class="card2">
                     <img class="one-png1" src="./one-more-png/1.png" alt="">
                     <h2>Managers</h2>
@@ -209,21 +209,21 @@
             <div class="pod-bird-conteiner">
                     <h2>Integrate Lokalise with <br> your work tools</h2>
                     <p>Automate processes, eliminate routine tasks, <br> and track progress with ease.</p>
-                    <img style="width: 1023px; height: 445px;" src="./bird-png/image.png" alt="">
-                    <button>See all integrations</button>
+                    <img src="./bird-png/image.png" alt="">
+                    <button class="btn bird-btn">See all integrations</button>
             </div>
         </div>
     </section>
-    <section class="skoro-konec-section">
+    <section class="btn-black-section">
         <div class="conteiner">
-            <div class="skoro-konec-conteiner">
+            <div class="btn-black-conteiner">
                 <h2>Localization made easy. <br> Why wait?</h2>
                 <p>Try for free or let us show you how it works.</p>
-                <button>Try it free</button>
+                <button class="btn btn-black">Try it free</button>
             </div>
         </div>
     </section>
-    <section class="nu-wot-wot-konec-section">
+    <footer>
         <div class="conteiner">
             <div class="mnogo-div-class">
                 <div class="velik-conteiner">
@@ -234,56 +234,56 @@
                     <a href="/">Read more</a>
                 </div>
                 <div class="ul-div">
-                    <p>Product</p>
+                    <h3>Product</h3>
                     <ul>
-                        <li>For developers</li>
-                        <li>For managers</li>
-                        <li>For translators</li>
-                        <li>For designers</li>
-                        <li>Integrations</li>
-                        <li>Security</li>
-                        <li>Pricing</li>
-                        <li>Automations</li>
+                        <li><a href="/">For developers</a></li>
+                        <li><a href="/">For managers</a></li>
+                        <li><a href="/">For translators</a></li>
+                        <li><a href="/">For designers</a></li>
+                        <li><a href="/">Integrations</a></li>
+                        <li><a href="/">Security</a></li>
+                        <li><a href="/">Pricing</a></li>
+                        <li><a href="/">Automations</a></li>
                     </ul>
                 </div>
                 <div class="ul-div">
-                    <p>Support</p>
+                    <h3>Support</h3>
                     <ul>
-                        <li>Contact</li>
-                        <li>Documentation</li>
-                        <li>Status</li>
-                        <li>Product Updates</li>
-                        <li>CLI Tool</li>
-                        <li>API Reference</li>
-                        <li>iOS and Android SDK</li>
-                        <li>Supported File Formats</li>
+                        <li><a href="/">Contact</a></li>
+                        <li><a href="/">Documentation</a></li>
+                        <li><a href="/">Status</a></li>
+                        <li><a href="/">Product Updates</a></li>
+                        <li><a href="/">CLI Tool</a></li>
+                        <li><a href="/">API Reference</a></li>
+                        <li><a href="/">iOS and Android SDK</a></li>
+                        <li><a href="/">Supported File Format</a></li>
                     </ul>
                 </div>
                 <div class="ul-div">
-                    <p>Company</p>
+                    <h3>Company</h3>
                     <ul>
-                        <li>About</li>
-                        <li>Blog</li>
-                        <li>Careers | We`re Hiring</li>
-                        <li>Case Studies</li>
-                        <li>Media Kit</li>
+                        <li><a href="/">About</a></li>
+                        <li><a href="/"></a></li>
+                        <li><a href="/">Careers | We`re Hiring</a></li>
+                        <li><a href="/">Case Studies</a></li>
+                        <li><a href="/">Media Kit</a></li>
                     </ul>
                 </div>
                 <div class="ul-div">
-                    <p>Legal</p>
+                    <h3>Legal</h3>
                     <ul>
-                        <li>Terms of Service</li>
-                        <li>Privacy Policy</li>
-                        <li>Cookie Policy</li>
-                        <li>Privacy Shield</li>
-                        <li>DPA</li>
-                        <li>List of Sub-processors</li>
-                        <li>Candidates Privacy <br> Notice</li>
+                        <li><a href="">Terms of Service</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Cookie Policy</a></li>
+                        <li><a href="">Privacy Shield</a></li>
+                        <li><a href="">DPA</a></li>
+                        <li><a href="">List of Sub-processors</a></li>
+                        <li><a href="">Candidates Privacy <br> Notice</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
     <div class="conteiner">
         <div class="grey-line"></div>
     </div>
